Trying to make a decent python package

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
+/build
+/dist
+/data/org.berarma.Oversteer.appdata.xml
+/data/org.berarma.Oversteer.desktop
+/locale/oversteer.pot
+/locale/**/*.mo
+/oversteer.egg-info
+/venv
 __pycache__
