Adjust desktop file keywords

--- a/data/org.berarma.Oversteer.desktop.in
+++ b/data/org.berarma.Oversteer.desktop.in
@@ -7,4 +7,4 @@ Type=Application
 StartupNotify=true
 Icon=org.berarma.Oversteer
 Categories=Games;Utility;
-Keywords=games;racing;wheels
+Keywords=game;racing;cars;wheels
