Add features from new-lg4ff

--- a/bin/meson.build
+++ b/bin/meson.build
@@ -4,6 +4,7 @@ conf.set('localedir', join_paths(prefix, get_option('localedir')))
 conf.set('pkgdatadir', pkgdatadir)
 conf.set('PYTHON', python3.find_python().path())
 conf.set('pythondir', join_paths(prefix, pythondir))
+conf.set('icondir', join_paths(prefix, icondir))
 
 configure_file(
   input: 'oversteer.in',
