Make desktop and appdata adher to FDO specs

--- a/data/org.berarma.Oversteer.desktop.in
+++ b/data/org.berarma.Oversteer.desktop.in
@@ -6,5 +6,5 @@ Terminal=false
 Type=Application
 StartupNotify=true
 Icon=org.berarma.Oversteer
-Categories=Games;Utility;
+Categories=Game;Utility;
 Keywords=game;racing;cars;wheels
