--- a/data/meson.build
+++ b/data/meson.build
@@ -23,7 +23,7 @@ appstream_file = i18n.merge_file(
   output: app_id + '.appdata.xml',
   po_dir: '../po',
   install: true,
-  install_dir: join_paths(get_option('datadir'), 'appdata')
+  install_dir: join_paths(get_option('datadir'), 'metainfo')
 )
 
 icondir = join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
