--- a/bin/meson.build
+++ b/bin/meson.build
@@ -2,8 +2,8 @@ conf = configuration_data()
 conf.set('VERSION', meson.project_version())
 conf.set('localedir', join_paths(prefix, get_option('localedir')))
 conf.set('pkgdatadir', pkgdatadir)
-conf.set('PYTHON', python3.find_python().path())
-conf.set('pythondir', join_paths(prefix, pythondir))
+conf.set('PYTHON', py_installation.path())
+conf.set('pythondir', join_paths(prefix, py_path))
 conf.set('icondir', join_paths(prefix, icondir))
 
 configure_file(
