Add Python dependencies check to meson.build

--- a/meson.build
+++ b/meson.build
@@ -10,6 +10,14 @@ pkgdatadir = join_paths(prefix, get_option('datadir'), meson.project_name())
 py_installation = pymod.find_installation('python3')
 py_path = py_installation.get_path('purelib')
 
+python3_required_modules = ['gi', 'pyudev', 'xdg', 'evdev', 'gettext', 'matplotlib', 'scipy', 'numpy']
+foreach p : python3_required_modules
+  script = 'import importlib.util; import sys; exit(1) if importlib.util.find_spec(\''+ p +'\') is None else exit(0)'
+  if run_command(py_installation, '-c', script).returncode() != 0
+    error('Required Python3 module \'' + p + '\' not found')
+  endif
+endforeach
+
 install_subdir('oversteer', install_dir: py_path)
 subdir('data')
 subdir('bin')
