Install udev rules in /usr/local/lib by default

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -5,4 +5,4 @@ option('python',
 option('udev_rules_dir',
        description: 'Installation path for udev rules',
        type: 'string',
-       value: 'auto')
+       value: '')
