Fix Meson deprecations and require 0.56

--- a/bin/meson.build
+++ b/bin/meson.build
@@ -2,7 +2,7 @@ conf = configuration_data()
 conf.set('VERSION', meson.project_version())
 conf.set('localedir', join_paths(prefix, get_option('localedir')))
 conf.set('pkgdatadir', pkgdatadir)
-conf.set('PYTHON', py_installation.path())
+conf.set('PYTHON', py_installation.full_path())
 conf.set('pythondir', join_paths(prefix, py_path))
 conf.set('icondir', join_paths(prefix, icondir))
 
@@ -14,7 +14,7 @@ configure_file(
   install_dir: get_option('bindir')
 )
 
-oversteer = join_paths(meson.build_root(), 'bin', 'oversteer')
+oversteer = join_paths(meson.project_build_root(), 'bin', 'oversteer')
 run_target('run',
   command: [oversteer],
 )
