--- a/flatpak/org.berarma.Oversteer.yaml
+++ b/flatpak/org.berarma.Oversteer.yaml
@@ -22,6 +22,8 @@ modules:
   - python-dependencies.yaml
   - name: oversteer
     buildsystem: meson
+    config-opts:
+      - -Dudev_rules_dir=/etc/udev/rules.d
     build-commands:
       - ninja install
     sources:
@@ -29,5 +31,3 @@ modules:
         url: https://github.com/berarma/oversteer.git
         tag: 0.8.1
         commit: 6f983170af984b3ed0a53f417ad599521dddb9ca
-      - type: patch
-        path: oversteer-udev-workaround.patch
