--- a/data/io.github.berarma.Oversteer.appdata.xml.in
+++ b/data/io.github.berarma.Oversteer.appdata.xml.in
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop-application">
-  <id>org.berarma.Oversteer</id>
-  <launchable type="desktop-id">org.berarma.Oversteer.desktop</launchable>
+  <id>io.github.berarma.Oversteer</id>
+    <replaces>
+      <id>org.berarma.Oversteer</id>
+    </replaces>
+  <launchable type="desktop-id">io.github.berarma.Oversteer.desktop</launchable>
   <name>Oversteer</name>
   <summary>Steering Wheel Manager</summary>
-  <developer id="org.berarma">
-    <name>berarma</name>
+  <developer id="io.github.berarma">
+    <name>Bernat Arlandis</name>
   </developer>
   <metadata_license>CC0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <description>
-    <p translatable="yes">Oversteer manages steering wheels on Linux using the features provided by the loaded modules.</p>
-    <p translatable="yes">Features:</p>
+    <p>Oversteer manages steering wheels on Linux using the features provided by the loaded modules.</p>
+    <p>Features:</p>
       <ul>
         <li>Change rotation range.</li>
         <li>Change emulation/working modes.</li>
@@ -27,10 +30,10 @@
         <li>Change each conditional force feedback effect type gain. (Not supported with in-kernel modules)</li>
         <li>FFBmeter to monitor FFB clipping using wheel leds or overlay window. (Not supported with in-kernel modules)</li>
       </ul>
+    <p>Note: The udev rules found in the GitHub repository need to be installed for the application to work properly.</p>
   </description>
-  <launchable type="desktop-id">org.berarma.Oversteer.desktop</launchable>
   <releases>
-    <release version="v0.8.2" date="2024-04-28">
+    <release version="0.8.2" date="2024-04-28">
       <description>
         <p>Fix freeze when changing compatibility mode.</p>
       </description>
